--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theo Xiong</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="static/files/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/files/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/files/favicons/favicon-16x16.png">
+    <link rel="manifest" href="static/files/favicons/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto:wght@400;500;700&family=Lato:wght@400;700&family=Open+Sans:wght@400;600&family=Source+Sans+Pro:wght@400;600&family=Nunito+Sans:wght@400;600&family=Work+Sans:wght@400;500&family=Poppins:wght@400;500;600&family=IBM+Plex+Sans:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/css/style.css">
 </head>
@@ -44,15 +48,14 @@
 
     <header>
         <h1>Theo Xiong</h1>
-        <!-- <p>CompE @ UIUC; Building <a href="#" target="_blank">Newton Notes</a></p> -->
-        <p>CompE @ UIUC; Building Newton Notebook</p>
+        <p>Computer Engineering @ UIUC "May 26</p>
     </header>
 
     <section id="about" class="section">
         <h2>About Me</h2>
         <p>I try to build useful stuff that please the eye.</p>
-        <p>Apart from coding, I also enjoy: music, matcha, photography, tennis, and fixing my car.</p>
-        <p>Scroll around to look at my projects, techstack, and more.</p>
+        <p>Aside from coding, I also enjoy poker, chess, tennis and basketball.</p>
+        <p>Scroll around to learn more about my technical abilities.</p>
     </section>
 
     <section id="tech-stack" class="section">
