--- a/index.html
+++ b/index.html
@@ -63,22 +63,23 @@
         <div class="tech-grid">
             <div class="tech-domain">
                 <div class="tech-items">
+                    <span class="tech-item featured">Flask</span>
                     <span class="tech-item featured">React</span>
                     <span class="tech-item">Tailwind</span>
                     <span class="tech-item">PostgreSQL</span>
-                    <span class="tech-item">Railway</span>
                     <span class="tech-item">Docker</span>
+                    <span class="tech-item">Railway</span>
                 </div>
             </div>
             
             <div class="tech-domain">
                 <div class="tech-items">
                     <span class="tech-item featured">Python</span>
-                    <span class="tech-item featured">Flask</span>
                     <span class="tech-item">Torch</span>
                     <span class="tech-item">Pandas</span>
                     <span class="tech-item">NumPy</span>
-                    <span class="tech-item">FastAPI</span>
+                    <span class="tech-item">openCV</span>
+                    <span class="tech-item">Seaborn</span>
                 </div>
             </div>
 
