--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
                     <span class="tech-tag">Google Search API</span>
                 </div>
             </li>
+             <li>
+                <div class="project-title">
+                    <div class="project-title"><a href="https://www.pokerbuddy.app/" target="_blank">PokerBuddy.app</a></div>
+                </div>
+                <div class="project-desc">The best web-based poker tracker with advanced analytics.</div>
+                <div class="project-tech">
+                    <span class="tech-tag">Flask</span>
+                    <span class="tech-tag">PostgreSQL</span>
+                </div>
+            </li>
             <li>
                 <div class="project-title">
                     <span class="coming-soon">
