--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </li>
              <li>
                 <div class="project-title">
-                    <div class="project-title"><a href="https://www.pokerbuddy.app/" target="_blank">PokerBuddy.app</a></div>
+                    <div class="project-title"><a href="https://pokerbuddy.app/" target="_blank">PokerBuddy.app</a></div>
                 </div>
                 <div class="project-desc">The best web-based poker tracker with advanced analytics.</div>
                 <div class="project-tech">
