--- a/index.html
+++ b/index.html
@@ -119,13 +119,23 @@
                     <span class="tech-tag">PostgreSQL</span>
                 </div>
             </li>
-            <li>
+            <!-- <li>
                 <div class="project-title">
                     <span class="coming-soon">
                         BetGlobal.win
                         <div class="coming-soon-feedback">Coming Soon!</div>
                     </span>
                 </div>
+                <div class="project-desc">New way of gambling. P2P & Zero Fees.</div>
+                <div class="project-tech">
+                    <span class="tech-tag">Flask</span>
+                    <span class="tech-tag">PostgreSQL</span>
+                    <span class="tech-tag">AWS EC2</span>
+                    <span class="tech-tag">Stripe API</span>
+                </div>
+            </li> -->
+            <li>
+                <div class="project-title"><a href="https://www.betgloballive.com/" target="_blank">BetGlobalLive.com</a></div>
                 <div class="project-desc">New way of gambling. P2P & Zero Fees.</div>
                 <div class="project-tech">
                     <span class="tech-tag">Flask</span>
