--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0a0a0f">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>TheoXiong.com</title>
     <link rel="apple-touch-icon" sizes="180x180" href="static/files/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="static/files/favicons/favicon-32x32.png">
@@ -30,13 +32,30 @@
             box-sizing: border-box;
         }
 
+        html {
+            background-color: #0a0a0f;
+            min-height: 100%;
+        }
+
         body {
             font-family: 'Space Grotesk', 'Inter', sans-serif;
-            background: linear-gradient(to bottom, #0a0a0f 0%, #0f0f14 30%, #1a1a20 100%);
+            background: transparent;
             color: var(--text-primary);
             line-height: 1.6;
             overflow-x: hidden;
             position: relative;
+            min-height: 100vh;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to bottom, #0a0a0f 0%, #0f0f14 30%, #1a1a20 100%);
+            z-index: -2;
         }
 
         .container {
