--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Theo Xiong - Software Engineer</title>
 
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Theo Xiong - Software Engineer">
+    <meta name="description" content="Computer Engineering student at UIUC building production-ready data pipelines, AI pipelines, and full-stack web applications. Check out my projects: InstaTruth, PokerBuddy, BetGlobalLive, and more.">
+    <meta name="keywords" content="Theo Xiong, Software Engineer, UIUC, Computer Engineering, Full Stack Developer, AI, Machine Learning, Web Development">
+    <meta name="author" content="Theo Xiong">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://theoxiong.com/">
+    <meta property="og:title" content="Theo Xiong - Software Engineer">
+    <meta property="og:description" content="Computer Engineering student at UIUC building production-ready data pipelines, AI pipelines, and full-stack web applications.">
+    <meta property="og:image" content="https://theoxiong.com/static/files/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://theoxiong.com/">
+    <meta property="twitter:title" content="Theo Xiong - Software Engineer">
+    <meta property="twitter:description" content="Computer Engineering student at UIUC building production-ready data pipelines, AI pipelines, and full-stack web applications.">
+    <meta property="twitter:image" content="https://theoxiong.com/static/files/og-image.png">
+
     <link rel="apple-touch-icon" sizes="180x180" href="static/files/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="static/files/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/files/favicons/favicon-16x16.png">
