--- a/index.html
+++ b/index.html
@@ -179,27 +179,10 @@
     <!-- Header -->
     <header class="fixed top-0 left-0 right-0 z-50 bg-dark/80 backdrop-blur-lg border-b border-white/5">
         <nav class="container mx-auto px-6 py-4">
-            <div class="flex items-center justify-between">
+            <div class="flex items-center justify-start">
                 <a href="#hero" class="text-2xl font-bold tracking-tight hover:text-accent transition-colors">
                     Theo <span class="font-mono text-accent">Xiong</span>
                 </a>
-
-                <div class="hidden md:flex items-center space-x-8">
-                    <a href="#about" class="text-sm text-gray-400 hover:text-white transition-colors">About</a>
-                    <a href="#tech-stack" class="text-sm text-gray-400 hover:text-white transition-colors">Skills</a>
-                    <a href="#projects" class="text-sm text-gray-400 hover:text-white transition-colors">Projects</a>
-                    <a href="#experience" class="text-sm text-gray-400 hover:text-white transition-colors">Experience</a>
-                    <a href="#contact" class="px-4 py-2 bg-accent hover:bg-accent-hover rounded-lg text-sm font-medium transition-colors">
-                        Contact
-                    </a>
-                </div>
-
-                <!-- Mobile menu button -->
-                <button id="mobile-menu-btn" class="md:hidden text-gray-400 hover:text-white transition-colors">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-                    </svg>
-                </button>
             </div>
         </nav>
     </header>
