minor text edits

--- a/index.html
+++ b/index.html
@@ -375,9 +375,9 @@
 
                 <!-- Header -->
                 <div class="max-w-7xl mx-auto mb-20">
-                    <span class="text-accent font-mono text-sm uppercase tracking-wider mb-6 block">Featured Work</span>
+                    <span class="text-accent font-mono text-sm uppercase tracking-wider mb-6 block">PROJECTS</span>
                     <h2 class="text-6xl md:text-8xl font-bold mb-12 leading-tight">
-                        Projects that
+                        Stuff that
                         <span class="block bg-gradient-to-r from-pink-500 via-orange-400 to-accent bg-clip-text text-transparent">
                             I built
                         </span>
@@ -507,11 +507,11 @@
 
                 <!-- Header -->
                 <div class="max-w-7xl mx-auto mb-20">
-                    <span class="text-accent font-mono text-sm uppercase tracking-wider mb-6 block">Professional Journey</span>
+                    <span class="text-accent font-mono text-sm uppercase tracking-wider mb-6 block">WORK</span>
                     <h2 class="text-6xl md:text-8xl font-bold mb-12 leading-tight">
-                        Experience that
+                        Professional
                         <span class="block bg-gradient-to-r from-pink-500 via-orange-400 to-accent bg-clip-text text-transparent">
-                            I experienced
+                            Experience
                         </span>
                     </h2>
                 </div>
