--- a/index.html
+++ b/index.html
@@ -20,12 +20,31 @@
     <link rel="icon" type="image/png" sizes="32x32" href="static/files/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/files/favicons/favicon-16x16.png">
 
-    <!-- Google Fonts - IBM Plex Mono -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&display=swap" rel="stylesheet">
-
     <style>
+        @font-face {
+            font-family: 'IBM Plex Mono';
+            src: url('static/fonts/IBM_Plex_Mono/IBMPlexMono-Light.ttf') format('truetype');
+            font-weight: 300;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'IBM Plex Mono';
+            src: url('static/fonts/IBM_Plex_Mono/IBMPlexMono-Regular.ttf') format('truetype');
+            font-weight: 400;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'IBM Plex Mono';
+            src: url('static/fonts/IBM_Plex_Mono/IBMPlexMono-Medium.ttf') format('truetype');
+            font-weight: 500;
+            font-style: normal;
+            font-display: swap;
+        }
+
         * {
             margin: 0;
             padding: 0;
