--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <a href="mailto:tyxiong2@illinois.edu">Email</a>
             <a href="https://www.linkedin.com/in/theoxiong/" target="_blank">LinkedIn</a>
             <a href="https://github.com/TheoXiong7" target="_blank">GitHub</a>
-            <a href="static/files/resume.pdf" target="_blank">Resume</a>
+            <!-- <a href="static/files/resume.pdf" target="_blank">Resume</a> -->
         </div>
     </div>
 
